alignment issue

--- a/src/Pages/personalBanking/accounts/accounts.css
+++ b/src/Pages/personalBanking/accounts/accounts.css
@@ -25,11 +25,11 @@
 
     top: 280px;
     
-    left: 575px;
+    left: 500px;
 }
 .buttons {
     display: flex;
-    left: 546px;
+    left: 475px;
     position: absolute;
 }
 .seniorAccountCreation h3 {
